ajuste do texto

--- a/html/contato.html
+++ b/html/contato.html
@@ -14,27 +14,27 @@
        <section class = "container">
            <div>
                <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
-               <p>FULANA DA SILVA</p>
-               <p>FRONT-END</p>
+               <p>Camila Albuquerque</p>
+               <p>Time HTML e CSS</p>
            </div>
            <div>
                <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
-               <p>FULANA DA SILVA</p>
-               <p>FRONT-END</p>
+               <p>Ilgner Silva</p>
+               <p>Time JavaScript</p>
            </div>
            <div>
                 <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
-                <p>FULANA DA SILVA</p>
-                <p>FRONT-END</p>
+                <p>Nilton Jr</p>
+                <p>Time HTML e CSS</p>
             </div>
             <div>
                 <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
-                <p>FULANA DA SILVA</p>
-                <p>FRONT-END</p>
+                <p>Vinicius Ribeiro</p>
+                <p>Tima JavaScript</p>
             </div>
             <div>
                 <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
-                <p>FULANA DA SILVA</p>
+                <p>Maria Vitoria</p>
                 <p>FRONT-END</p>
             </div>
         </section>
