--- a/html/contato.html
+++ b/html/contato.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header></header>
-    <main>
+    <main> 
+        <!--Contato: mostrando a equipeDev-->
         <h1>A equipe do ResiliaFlix é:</h1>
        <section class = "container">
            <div>
