HTML Contatos e Cadastro criados

--- a/html/contato.html
+++ b/html/contato.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/contato.css">
+    <script src="" defer></script>
     <title>Contato</title>
 </head>
 <body>
     <header></header>
     <main>
+        <!--Contato: mostrando a equipeDev-->
         <h1>A equipe do ResiliaFlix é:</h1>
-       <section class = "container">
+        <section class = "container">
            <div>
                <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
                <p>Camila Albuquerque</p>
