--- a/javascript/teste/index.html
+++ b/javascript/teste/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="./script.js"></script>
+    <script src="../jquery-3.6.0.min.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <input type="search" name="" id="search">
     <p id="print"></p>
     <img src="" alt="">
+
+    <script src=""></script>
 </body>
 </html>
