--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -46,8 +46,8 @@
                     <label for="inputCEP">CEP</label> 
                     <div id="cep">
                         <input type="text" class="form-control" id="inputCEP" placeholder="Digite seu CEP">
-                        <button class= "btn"><i class="fas fa-search-location"></i></button>
-                        <img src="" alt="" id="check">
+                        <a class="buscacep" href="https://buscacepinter.correios.com.br/app/endereco/index.php">Não sabe seu CEP?</a>
+                        
                     </div>
                 </div>
               
