--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/cadastro.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script defer src="../javascript/apiCep/cadastroUsuario.js"></script>
     <script defer src="../javascript/apiCep/cep.js"></script>
     <!-- COLOCAR O LINK DO SCRIP DO JS <script src="" defer></script>  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -79,7 +80,7 @@
                 </div>
             </div>
                  
-            <button type="submit" class="btn btn-primary">Entrar</button>
+            <button type="button" class="btn btn-primary">Entrar</button>
           </form>
        
     </main>
