Estilização da página contatos - HTML e CSS.

--- a/html/contato.html
+++ b/html/contato.html
@@ -9,39 +9,75 @@
     <title>Contato</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="menu-bg">
+			<div class="menu">
+				<div class="menu_logo">
+					<a href="../index.html"><img src="../img/RESILIAFLIX.gif" alt="logo1" class="gif">
+				</div><!-- .menu_logo -->
+				<nav class="nav">
+					<ul class="nav_list">
+                        <ol><a href="#info" class="nav_link">Cadastre-se</a></ol>
+				    	<ol><a href="#login" class="nav_link">Entrar</a></ol>
+						<ol><a href="#pesquisa" class="nav_link">Pesquisar</a></ol>
+						<ol><a href="#info" class="nav_link">Contato</a></ol>
+					</ul> <!--nav_list-->
+				</nav> <!-- nav -->
+			</div> <!-- .menu -->
+		</div> <!-- .menu-bg -->
+    </header>
+    
     <main>
         <!--Contato: mostrando a equipeDev-->
-        <h1>A equipe do ResiliaFlix é:</h1>
+        <h1>Equipe ResiliaFlix</h1>
         <section class = "container">
            <div>
-               <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
+               <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
                <p>Camila Albuquerque</p>
                <p>Time HTML e CSS</p>
+               <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
+               <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
+
            </div>
            <div>
-               <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
+               <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
                <p>Ilgner Silva</p>
                <p>Time JavaScript</p>
+               <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
+               <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
            </div>
            <div>
-                <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
+                <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
                 <p>Nilton Jr</p>
                 <p>Time HTML e CSS</p>
+                <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
+                <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
             </div>
             <div>
-                <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
+                <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
                 <p>Vinicius Ribeiro</p>
                 <p>Tima JavaScript</p>
+                <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
+                <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
             </div>
             <div>
-                <img src="../img/avatarfem.jpg" alt="" class="grupoimg">
+                <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
                 <p>Maria Vitoria</p>
                 <p>FRONT-END</p>
+                <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
+                <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
             </div>
         </section>
 
     </main>
-    <footer></footer>
+
+    <footer class="footer">
+        <div class= "linksFooter">
+             <a href="../index.html">Home</a>
+             <span>-</span>
+             <a href="contato.html">Quem Somos</a>
+             <span>-</span>
+             <a href="cadastro.html">Cadastre-se aqui</a>
+        </div>
 </body>
 </html>
