Ajustes de footer e header da pagina de contato, ajuste de estilização em cadastro e contato.css

--- a/html/contato.html
+++ b/html/contato.html
@@ -20,7 +20,7 @@
                         <ol><a href="#info" class="nav_link">Cadastre-se</a></ol>
 				    	<ol><a href="#login" class="nav_link">Entrar</a></ol>
 						<ol><a href="#pesquisa" class="nav_link">Pesquisar</a></ol>
-						<ol><a href="#info" class="nav_link">Contato</a></ol>
+						<!-- <ol><a href="#info" class="nav_link">Contato</a></ol> -->
 					</ul> <!--nav_list-->
 				</nav> <!-- nav -->
 			</div> <!-- .menu -->
@@ -32,41 +32,42 @@
         <h1>Equipe ResiliaFlix</h1>
         <section class = "container">
            <div>
-               <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
-               <p>Camila Albuquerque</p>
-               <p>Time HTML e CSS</p>
-               <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
-               <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
+                <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
+                <h2>Camila Albuquerque</h2>
+                <p>Time HTML e CSS</p>
+                <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
+                <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
 
            </div>
            <div>
-               <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
-               <p>Ilgner Silva</p>
-               <p>Time JavaScript</p>
-               <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
-               <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
+                <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
+                <h2>Ilgner Silva</h2>
+                <p>Time JavaScript</p>
+                <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
+                <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
            </div>
            <div>
                 <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
-                <p>Nilton Jr</p>
+                <h2>Maria Vitoria</h2>
+                <p>FRONT-END</p>
+                <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
+                <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
+            </div>
+           <div>
+                <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
+                <h2>Nilton Jr</h2>
                 <p>Time HTML e CSS</p>
                 <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
                 <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
             </div>
             <div>
                 <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
-                <p>Vinicius Ribeiro</p>
+                <h2>Vinicius Ribeiro</h2>
                 <p>Tima JavaScript</p>
                 <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
                 <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
             </div>
-            <div>
-                <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
-                <p>Maria Vitoria</p>
-                <p>FRONT-END</p>
-                <img src="../img/logoGitHub.png" alt="" class="redesSociaisImg">
-                <img src="../img/logoLinkedIn.jpg" alt="" class="redesSociaisImg">
-            </div>
+          
         </section>
 
     </main>
@@ -79,5 +80,9 @@
              <span>-</span>
              <a href="cadastro.html">Cadastre-se aqui</a>
         </div>
+        
+        <p>Copyright © 2021 RESILIAFLIX Brasil. Todos os direitos reservados, projeto criado para fins educativos. </p>
+    </footer>
+
 </body>
 </html>
