--- a/index.html
+++ b/index.html
@@ -33,6 +33,86 @@
       <div class="main-child">
         <h1>Entreterimento e diversão, sem limites!<br> <h2>Aqui você encontra o melhor catálogo de filmes</h2></h1>
       </div>
+      <div>
+        <section>
+        <div class="gallery-wrap">
+          <div class="gallery-center" id="GalleryCenter">
+            <div class="gallery-box">
+              <a href="#">
+                <img src="img/1.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/2.png" alt="">
+              </a>
+            </div><!--gallery-box-->
+            <div class="gallery-box">
+              <a href="#">
+                <img src="img/3.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/4.png" alt="">
+              </a>
+            </div><!--gallery-box-->
+            <div class="gallery-box">
+              <a href="#">
+                <img src="img/5.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/6.png" alt="">
+              </a>
+            </div><!--gallery-box-->
+            <div class="gallery-box">
+              <a href="#">
+                <img src="img/7.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/8.png" alt="">
+              </a>
+            </div><!--gallery-box-->
+            <div class="gallery-box">
+              <a href="#">
+                <img src="img/9.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/10.png" alt="">
+              </a>
+            </div><!--gallery-box-->
+            <div class="gallery-box">
+              <a href="#">
+                <img src="img/11.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/12.png" alt="">
+              </a>
+            </div><!--gallery-box-->
+            <div class="gallery-box">
+              <a href="#">
+                <img src="img/13.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/14.png" alt="">
+              </a>
+            </div><!--gallery-box-->
+            <div class="gallery-box">
+              <a href="#">
+                <img src="img/15.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/16.png" alt="">
+              </a>
+            </div><!--gallery-box-->
+            <div class="gallery-box">
+              <a href="#">
+                <img src="img/17.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/18.png" alt="">
+              </a>
+            </div><!--gallery-box-->
+          </div><!--gallery-center-->
+        </div> <!--gallery-wrap-->
+      </div>
+    </section>
         
      <div class="gradient"></div>
     </main>
@@ -158,6 +238,7 @@
 
     </footer>
     </main>
+    <script src="javascript/anim.js"></script>
     <script src="javascript/mobile-navbar.js"></script>
   </body>
 </html>
