adicionado botão scroll no index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>RESILIAFLIX-ENTRETERIMENTO E DIVERSÃO</title>
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   </head>
 
   <body>
@@ -200,6 +201,7 @@
     </section>
     <section class="download section">
       <div class="container">
+        <div class="scrollButton"><i id="scrollbtn" class="fas fa-arrow-down fa-3x"></i></div>
         <div class="grid">
           <div>
             <h2>Utilize o modo aleatório de indicação</h2>
