--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="nav-list">
           <!--li><a href="#">HOME</a></li-->
-          <li><a href="#">PESQUISA</a></li>
+          <li><a href="#">ENTRAR</a></li>
           <li><a href="#">CADASTRO</a></li>
           <li><a href="#">CONTATO</a></li>
         </ul>
