--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="nav-list">
           <!--li><a href="#">HOME</a></li-->
           <li><a href="#">ENTRAR</a></li>
-          <li><a href="#">CADASTRO</a></li>
+          <li><a href="./html/cadastro.html">CADASTRO</a></li>
           <li><a href="#">CONTATO</a></li>
         </ul>
       </nav>
