Aplicando Modal do Bootstrap

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
         <ul class="nav-list">
           <!--li><a href="#">HOME</a></li-->
-          <li><a href="#">ENTRAR</a></li>
+          <li><a href="./html/login.html">ENTRAR</a></li>
           <li><a href="./html/cadastro.html">CADASTRO</a></li>
-          <li><a href="#">CONTATO</a></li>
+          <li><a href="./html/contato.html">CONTATO</a></li>
         </ul>
       </nav>
     </header> <!--FIM CABEÇALHO-->
