Atualização das páginas

--- a/html/contato.html
+++ b/html/contato.html
@@ -44,7 +44,7 @@
 
            </div>
            <div>
-                <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
+                <img src="../img/ilgnerLogo.jfif" alt="" class="grupoImg">
                 <h2>Ilgner</h2>
                 <h2>Silva</h2>
                 <p>Time JavaScript</p>
@@ -57,7 +57,7 @@
            </div>
 
            <div>
-                <img src="../img/avatarfem.jpg" alt="" class="grupoImg">
+                <img src="../img/vihLogo" alt="" class="grupoImg">
                 <h2>Maria</h2>
                 <h2>Vitoria</h2>
                 <p>FRONT-END</p>
@@ -70,7 +70,7 @@
             </div>
  
             <div>
-                <img src="../img/niltonLogo.jpg" alt="" class="grupoImg">
+                <img src="../img/jrLogo.jpeg" alt="" class="grupoImg">
                 <h2>Nilton</h2>
                 <h2>Júnior</h2>
                 <p>Time HTML e CSS</p>
