--- a/html/infoDeFilme.html
+++ b/html/infoDeFilme.html
@@ -34,21 +34,22 @@
         <!--Formuário de pesquisa do filme-->
         <h1>Informações do Filme</h1>
         <section class = "container">
+            <form>
+                <div class="form-group col-md-6" >
+                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Pesquise aqui:">
+                </div>
+                <button type="submit" class="btnCadastrar">Pesquisar</button>
+            </form> 
+             
             <div class="media">
-                <img class="align-self-end mr-3" src="../img/roloDeFilme.jfif" alt="Poster do">
+                <img class="mediaImg" src="../img/roloDeFilme.jfif" alt="">
                 <div class="media-body">
-                  <h5 class="mt-0">Nome do Filme aparecerá aqui</h5>
-                  <p>Descrição do Filme aparecerá aqui.</p>
-                  <p class="mb-0">Sinopse aparecerá aqui.</p>
+                  <h5>Nome do Filme aparecerá aqui</h5>
+                  <p> A descrição do Filme aparecerá aqui.</p>
+                  <p>Sinopse aparecerá aqui.</p>
                 </div>
             </div>
 
-            <form>
-                <div class="form-group">
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Insira o nome do filme a ser procurado:">
-                </div>
-                <button type="submit" class="btn btn-primary">Pesquisar</button>
-              </form>  
         </section>
 
     </main>
@@ -65,6 +66,8 @@
         
         <p>Copyright © 2021 RESILIAFLIX Brasil. Todos os direitos reservados, projeto criado para fins educativos. </p>
     </footer>
+
+
 
 </body>
 </html>
