atualização responsividade/correção animação sobre menu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <main>
       <div class="main-child">
-        <h1>Entreterimento e diversão, sem limites!<br> <h2>Aqui você encontra o melhor catálogo de filmes</h2></h1>
+        <h1>Entreterimento e diversão, sem limites!<br> <h2>Aqui você encontra o melhor catálogo.</h2></h1>
       </div>
       <div>
         <section>
@@ -95,9 +95,9 @@
               </a>
             </div><!--gallery-box-->
             <div class="gallery-box">
-              <a href="#">
+              <!--a href="#">
                 <img src="img/15.png" alt="">
-              </a>
+              </a-->
               <a href="#">
                 <img src="img/16.png" alt="">
               </a>
@@ -183,48 +183,36 @@
          });
       </script>
     </section>
-    <section class="section">
-      <div class="container">
-        <div class="grid">
-          <div>
-            <h2>Aproveite em qualquer lugar, e quando quiser</h2>
-            <p>
-              Assista em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
-              aparelhos de Blu-ray, celular, tablet, smart TV ou notebook.
-            </p>
-          </div>
-          <div class="img-tv">
-            <img src="img/bg1.jpg" alt="TV" draggable="true"/>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="download section">
-      <div class="container">
-        <div class="scrollButton"><i id="scrollbtn" class="fas fa-arrow-down fa-3x"></i></div>
-        <div class="grid">
-          <div>
-            <h2>Utilize o modo aleatório de indicação</h2>
-            <p>
-              Tá em dúvida do que assistir? Ou, nem sabe o que quer ver?
-              Para usar o seu tempo assistindo, e não procurando desenvolvemos 
-              essa forma prática, onde te recomendamos algo com o seu perfil do dia!
-            </p>
-          </div>
-          <div class="img-tv">
-            <img src="img/dado1.gif" alt="El" draggable="true"/>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--section>
-        <div>
-        <form class="form-cta">
-            <input type="text" placeholder="Email" />
-            <button>Cadastrar</button>
-          </form>
-        </div>
-    </section-->
+    <section class="somos" id="somos">
+      <h2 class="section_title"> <br>Aproveite em qualquer lugar, e quando quiser </h2>
+      <div class="somos-c">
+        <div class="somos-c_texto">
+          <p>
+            Assista em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
+            aparelhos de Blu-ray, celular, tablet, smart TV ou notebook.
+        </div> <!-- somos-c_texto -->
+            <div class="somos-c_img">
+            <img src="img/bg1.png" alt="Quem somos">
+            </div> <!--somos-c_img-->
+      </div> <!-- somos-c -->
+    </section> <!-- .somos-->
+
+    <section class="somos" id="somos">
+      <h2 class="section_title"> <br>Utilize o modo aleatório de indicação </h2>
+      <div class="somos-c">
+        <div class="somos-c_texto">
+          <p>
+            <br>Tá em dúvida do que assistir?<br> Ou, nem sabe o que quer ver?
+            Para usar o seu tempo assistindo, e não procurando desenvolvemos 
+            essa forma prática, onde te recomendamos algo com o seu perfil do dia!
+            
+          </p>
+        </div> <!-- somos-c_texto -->
+            <div class="somos-c_img">
+            <img src="img/dado1.gif" alt="Quem somos">
+            </div> <!--somos-c_img-->
+      </div> <!-- somos-c -->
+    </section> <!-- .somos-->
 
     <footer class="footer">
        <div class= "linksFooter">
