--- a/index.html
+++ b/index.html
@@ -132,40 +132,40 @@
     <section class="carrosel">
       <div class="wrapper">
          <div class="carousel owl-carousel">
-            <div class="card card-1">
+            <div class="postersss card card-1">
                1
             </div>
-            <div class="card card-2">
+            <div class="postersss card card-2" id="teste">
                2
             </div>
-            <div class="card card-3">
+            <div class="postersss card card-3">
                3
             </div>
-            <div class="card card-4">
+            <div class="postersss card card-4">
                4
             </div>
-            <div class="card card-5">
+            <div class="postersss card card-5">
                5
             </div>
-            <div class="card card-5">
+            <div class="postersss card card-5">
                6
             </div>
-            <div class="card card-5">
+            <div class="postersss card card-5">
                7
             </div>
-            <div class="card card-5">
+            <div class="postersss card card-5">
                8
             </div>
-            <div class="card card-5">
+            <div class="postersss card card-5">
                9
             </div>
-            <div class="card card-5">
+            <div class="postersss card card-5">
                10
             </div>
-            <div class="card card-5">
+            <div class="postersss card card-5">
                11
             </div>
-            <div class="card card-5">
+            <div class="postersss card card-5">
                12
             </div>
          </div>
