--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <!-- Link da Fonte Acme -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
 
-
+  
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/obrigatorios.css">
 </head>
@@ -50,8 +54,8 @@
 
   <main>
     <div class="main-child">
-      <h1>Entreterimento e diversão, sem limites!<br>
-        <h2>Aqui você encontra o melhor catálogo.</h2>
+      <h1>Entreterimento e diversão sem limites!<br>
+        <h2>Aqui você encontra o melhor catálogo</h2>
       </h1>
     </div>
     <div>
