Finalizado modal de filmes

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <label id="label-valida-senha" for="valida-senha">Senha</label>
         <input type="password" class="input-modal" id="valida-senha" placeholder="Senha">
 
-        <a href="#modalEsqueciASenha">Esqueci a senha</a>
+        <a href="./html/recuperarSenha.html">Esqueci a senha</a>
         <input type="button" class="input-button" id="btn-logar" value="Entrar">
         <div id="msg-error"></div>
       </form>
