--- a/html/buscaFilme.html
+++ b/html/buscaFilme.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Link da Fonte Acme -->
+  <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
 
   <!--Referenciando os arquivos .js-->
   <!-- JS PARA BUSCAR NA API E DEVOLVER O FILME -->
@@ -26,8 +30,8 @@
   <!--Referenciando os arquivos .css-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/buscaFilme.css">
-  <link rel="stylesheet" href="../css/obrigatorios.css">
+    <link rel="stylesheet" href="../css/obrigatorios.css">
+    <link rel="stylesheet" href="../css/buscaFilme.css">
 
   <title>Pesquisa de Filme</title>
 </head>
@@ -160,14 +164,14 @@
   <div class="modal-container">
     <div class="modal-flex">
       <div class="modal-info-filmes">
-        <p>Score:</p>
-        <p>Ano:</p>
-        <p>Duração:</p>
-        <p>Indicação Faixa Etária:</p>
-        <p>Genero do Filme</p>
-        <p>Diretor</p>
-        <p>Elenco</p>
-        <p id="sinopse-modal">sinopse</p>
+        <p class="infoModal" id="score">Score:</p>
+        <p class="infoModal" id="year">Ano:</p>
+        <p class="infoModal" id="runtime">Duração:</p>
+        <p class="infoModal" id="rated">Indicação Faixa Etária:</p>
+        <p class="infoModal" id="genere">Genero do Filme</p>
+        <p class="infoModal" id="director">Diretor</p>
+        <p class="infoModal" id="actors">Elenco</p>
+        <p class="infoModal" id="sinopse-modal">sinopse</p>
         <button class="fechar-modal">x</button>
       </div>
   
