corrigido typos no HTML

--- a/html/contato.html
+++ b/html/contato.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                    <button type="button" class="btn btn-warning">Recupear senha</button>
+                    <button type="button" class="btn btn-warning">Recuperar senha</button>
                     <!--data-dismiss="modal" fecha o modal-->
                 </div>
               </div>
@@ -183,7 +183,7 @@
                 <img src="../img/viniLogo.jpeg" alt="" class="grupoImg">
                 <div>
                     <h2>Vinicius Ribeiro</h2>
-                    <p>Tima JavaScript</p>
+                    <p>Time JavaScript</p>
                     <a href="https://github.com/viniciusr-cmd" target="about:blank">
                         <img src="../img/logoGitHub.png" class="redesSociaisImg">
                     </a>
