--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                    <button type="button" class="btn btn-warning">Recupear senha</button>
+                    <button type="button" class="btn btn-warning">Recuperar senha</button>
                     <!--data-dismiss="modal" fecha o modal-->
                 </div>
               </div>
