Adicionado icone na aba no navegador

--- a/html/buscaFilme.html
+++ b/html/buscaFilme.html
@@ -32,7 +32,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/obrigatorios.css">
     <link rel="stylesheet" href="../css/buscaFilme.css">
-
+    <link rel="shortcut icon" href="../img/logo.jpg">
   <title>Pesquisa de Filme</title>
 </head>
 
@@ -173,8 +173,7 @@
         <p class="infoModal" id="actors">Elenco</p>
         <p class="infoModal" id="sinopse-modal">sinopse</p>
         <button class="fechar-modal">x</button>
-      </div>
-  
+      </div> 
       <div class="modal-poster">
         <img class="poster-descricao" src="../img/roloDeFilme.jfif" alt="">
       </div>
