--- a/html/recuperarSenha.html
+++ b/html/recuperarSenha.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="../css/recuperarSenha.css">
   <link rel="stylesheet" href="../css/obrigatorios.css">
+  <link rel="shortcut icon" href="../img/logo.jpg">
   <script defer src="../javascript/Recupera senha/recuperaSenha.js" defer></script>
   <title>Esqueci minha senha</title>
 </head>
