--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
 
-  
+  <link rel="shortcut icon" href="./img/logo.jpg">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/obrigatorios.css">
 </head>
@@ -70,61 +70,61 @@
               <a style="background-color: rgb(66, 66, 107); height: 500px;" href="./html/buscaFilme.html">
                 <img src="img/1.png" alt="">
               </a>
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/2.png" alt="">
               </a>
             </div>
             <!--gallery-box-->
             <div class="gallery-box">
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/3.png" alt="">
               </a>
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/4.png" alt="">
               </a>
             </div>
             <!--gallery-box-->
             <div class="gallery-box">
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/5.png" alt="">
               </a>
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/6.png" alt="">
               </a>
             </div>
             <!--gallery-box-->
             <div class="gallery-box">
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/7.png" alt="">
               </a>
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/8.png" alt="">
               </a>
             </div>
             <!--gallery-box-->
             <div class="gallery-box">
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/9.png" alt="">
               </a>
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/10.png" alt="">
               </a>
             </div>
             <!--gallery-box-->
             <div class="gallery-box">
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/11.png" alt="">
               </a>
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/12.png" alt="">
               </a>
             </div>
             <!--gallery-box-->
             <div class="gallery-box">
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/13.png" alt="">
               </a>
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/14.png" alt="">
               </a>
             </div>
@@ -133,16 +133,16 @@
               <!--a href="#">
                 <img src="img/15.png" alt="">
               </a-->
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/16.png" alt="">
               </a>
             </div>
             <!--gallery-box-->
             <div class="gallery-box">
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/17.png" alt="">
               </a>
-              <a href="#">
+              <a href="./html/buscaFilme.html">
                 <img src="img/18.png" alt="">
               </a>
             </div>
