--- a/html/contato.html
+++ b/html/contato.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="../css/obrigatorios.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     
-    
+    <link rel="shortcut icon" href="../img/logo.jpg">
     <title>Quem somos?</title>
 </head>
 
